# NeuralNetwork_MultiClassClassifier

./: CMakeLists.txt
include/: CoordinateSystem.h  NeuralNetwork.h
qml/: MainWindow.qml
qml/components/: CoordinateSystem.qml  ScreenTools.qml
qml/widgets/: CustomButton.qml  CustomComboBox.qml  CustomLabel.qml
qmlmodules/CustomWidgets/: qmldir
qmlmodules/ScreenTools/: qmldir
qmlmodules/comps/: qmldir
src/: CoordinateSystem.cpp  NeuralNetwork.cpp  main.cpp
